<resources>
    <string name="app_name">Capstone</string>
    
    <!-- 공통 -->
    <string name="menu_title_server">서버</string>
    <string name="menu_title_chat">채팅</string>
    <string name="menu_title_profile">프로필</string>
    
    <!-- 인증 -->
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="username">사용자 이름</string>
    <string name="login_link">이미 계정이 있으신가요? 로그인하기</string>
    <string name="register_link">계정이 없으신가요? 회원가입하기</string>
    
    <!-- 프로필 -->
    <string name="logout">로그아웃</string>
    <string name="status">상태:</string>
    
    <!-- 서버 -->
    <string name="create_server">서버 만들기</string>
    <string name="server_name">서버 이름</string>
    <string name="select_image">이미지 선택</string>
    <string name="my_servers">내 서버</string>
    
    <!-- 채널 -->
    <string name="create_channel">채널 만들기</string>
    <string name="channel_name">채널 이름</string>
    <string name="channel_type">채널 유형</string>
    
    <!-- 채팅 -->
    <string name="message_hint">메시지 입력...</string>
    <string name="send_message">메시지 전송</string>
    <string name="sender_profile_image">발신자 프로필 이미지</string>
</resources>
